# filefinder

./: .gitignore  AUTHORS  Makefile.am  NEWS  README.md  configure.ac
data/: Makefile.am  filefinder.desktop
data/icons/: Makefile.am
data/templates/: Makefile.am  template
debian/: changelog  control  filefinder.lintian-overrides  rules
man/: Makefile.am  filefinder.1
packaging/: packaging.sh
src/: Makefile.am  file-finder-window.vala  filefinder.vala  filter-files.vala  filter-location.vala  filter-text.vala  filter.vala  main.vala  nautilus-extension.vala  query-editor.vala  query-row.vala  query.vala  service.vala  tests.vala
src/base/: filter-bin.vala  filter-date.vala  filter-files.vala  filter-location.vala  filter-mask.vala  filter-mime.vala  filter-modified.vala  filter-none.vala  filter-size.vala  filter-text.vala  filter.vala  plugin.vala  query.vala  result.vala  service.vala
src/common/: debug.vala  text.vala
src/gui/: button-type.vala  column-menu-item.vala  dialog-mime-chooser.vala  file-finder-window.vala  filter-bar.vala  input-dialog.vala  menu-item-id.vala  mime-button.vala  page-plugin.vala  preferences.vala  query-editor.vala  query-row.vala  results-view.vala  tool-button.vala  toolbar.vala
src/nautilus/: Makefile.am  nautilus-extension.vala
vapi/: config.vapi  nautilus.vapi
